// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sortable tableComponent can sort on another column 1`] = `

<div id="app">
  <div>
    <div class="table-component">
      <div class="table-component__filter">
        <input type="text"
               placeholder="Filter table…"
               class="table-component__filter__field"
        >
        <!---->
      </div>
      <div class="table-component__table-wrapper">
        <table class="table-component__table">
          <caption role="alert"
                   aria-live="polite"
                   class="table-component__table__caption"
          >
            Table sorted by firstName (ascending)
          </caption>
          <thead class="table-component__table__head">
            <tr>
              <th role="columnheader"
                  scope="col"
                  aria-sort="ascending"
                  class="table-component__th table-component__th--sort-asc"
              >
                First name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-sort="none"
                  class="table-component__th table-component__th--sort"
              >
                Songs
              </th>
            </tr>
          </thead>
          <tbody class="table-component__table__body">
            <tr>
              <td>
                Paul
              </td>
              <td>
                20
              </td>
            </tr>
            <tr>
              <td>
                John
              </td>
              <td>
                30
              </td>
            </tr>
            <tr>
              <td>
                Ringo
              </td>
              <td>
                210
              </td>
            </tr>
            <tr>
              <td>
                George
              </td>
              <td>
                420
              </td>
            </tr>
          </tbody>
          <tfoot>
          </tfoot>
        </table>
      </div>
      <!---->
      <div style="display: none;">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>

`;

exports[`Sortable tableComponent can sort the data with by a specific column 1`] = `

<div id="app">
  <div>
    <div class="table-component">
      <div class="table-component__filter">
        <input type="text"
               placeholder="Filter table…"
               class="table-component__filter__field"
        >
        <!---->
      </div>
      <div class="table-component__table-wrapper">
        <table class="table-component__table">
          <caption role="alert"
                   aria-live="polite"
                   class="table-component__table__caption"
          >
            Table sorted by firstName (descending)
          </caption>
          <thead class="table-component__table__head">
            <tr>
              <th role="columnheader"
                  scope="col"
                  aria-sort="descending"
                  class="table-component__th table-component__th--sort-"
              >
                First name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-sort="none"
                  class="table-component__th table-component__th--sort"
              >
                Last name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-disabled="true"
                  class="table-component__th"
              >
                Songs
              </th>
            </tr>
          </thead>
          <tbody class="table-component__table__body">
            <tr>
              <td>
                George
              </td>
              <td>
                Harrison
              </td>
              <td>
                22
              </td>
            </tr>
            <tr>
              <td>
                John
              </td>
              <td>
                Lennon
              </td>
              <td>
                72
              </td>
            </tr>
            <tr>
              <td>
                Paul
              </td>
              <td>
                McCartney
              </td>
              <td>
                70
              </td>
            </tr>
            <tr>
              <td>
                Ringo
              </td>
              <td>
                Starr
              </td>
              <td>
                2
              </td>
            </tr>
          </tbody>
          <tfoot>
          </tfoot>
        </table>
      </div>
      <!---->
      <div style="display: none;">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>

`;

exports[`Sortable tableComponent can sort the data with by a specific column in a specific order 1`] = `

<div id="app">
  <div>
    <div class="table-component">
      <div class="table-component__filter">
        <input type="text"
               placeholder="Filter table…"
               class="table-component__filter__field"
        >
        <!---->
      </div>
      <div class="table-component__table-wrapper">
        <table class="table-component__table">
          <caption role="alert"
                   aria-live="polite"
                   class="table-component__table__caption"
          >
            Table sorted by firstName (descending)
          </caption>
          <thead class="table-component__table__head">
            <tr>
              <th role="columnheader"
                  scope="col"
                  aria-sort="descending"
                  class="table-component__th table-component__th--sort-desc"
              >
                First name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-sort="none"
                  class="table-component__th table-component__th--sort"
              >
                Last name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-disabled="true"
                  class="table-component__th"
              >
                Songs
              </th>
            </tr>
          </thead>
          <tbody class="table-component__table__body">
            <tr>
              <td>
                Ringo
              </td>
              <td>
                Starr
              </td>
              <td>
                2
              </td>
            </tr>
            <tr>
              <td>
                Paul
              </td>
              <td>
                McCartney
              </td>
              <td>
                70
              </td>
            </tr>
            <tr>
              <td>
                John
              </td>
              <td>
                Lennon
              </td>
              <td>
                72
              </td>
            </tr>
            <tr>
              <td>
                George
              </td>
              <td>
                Harrison
              </td>
              <td>
                22
              </td>
            </tr>
          </tbody>
          <tfoot>
          </tfoot>
        </table>
      </div>
      <!---->
      <div style="display: none;">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>

`;

exports[`Sortable tableComponent can sort the data with by another specific column 1`] = `

<div id="app">
  <div>
    <div class="table-component">
      <div class="table-component__filter">
        <input type="text"
               placeholder="Filter table…"
               class="table-component__filter__field"
        >
        <!---->
      </div>
      <div class="table-component__table-wrapper">
        <table class="table-component__table">
          <caption role="alert"
                   aria-live="polite"
                   class="table-component__table__caption"
          >
            Table sorted by lastName (descending)
          </caption>
          <thead class="table-component__table__head">
            <tr>
              <th role="columnheader"
                  scope="col"
                  aria-sort="none"
                  class="table-component__th table-component__th--sort"
              >
                First name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-sort="descending"
                  class="table-component__th table-component__th--sort-"
              >
                Last name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-disabled="true"
                  class="table-component__th"
              >
                Songs
              </th>
            </tr>
          </thead>
          <tbody class="table-component__table__body">
            <tr>
              <td>
                George
              </td>
              <td>
                Harrison
              </td>
              <td>
                22
              </td>
            </tr>
            <tr>
              <td>
                John
              </td>
              <td>
                Lennon
              </td>
              <td>
                72
              </td>
            </tr>
            <tr>
              <td>
                Paul
              </td>
              <td>
                McCartney
              </td>
              <td>
                70
              </td>
            </tr>
            <tr>
              <td>
                Ringo
              </td>
              <td>
                Starr
              </td>
              <td>
                2
              </td>
            </tr>
          </tbody>
          <tfoot>
          </tfoot>
        </table>
      </div>
      <!---->
      <div style="display: none;">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>

`;

exports[`Sortable tableComponent it will change the sort order when clicking the header of the column with the active sort 1`] = `

<div id="app">
  <div>
    <div class="table-component">
      <div class="table-component__filter">
        <input type="text"
               placeholder="Filter table…"
               class="table-component__filter__field"
        >
        <!---->
      </div>
      <div class="table-component__table-wrapper">
        <table class="table-component__table">
          <caption role="alert"
                   aria-live="polite"
                   class="table-component__table__caption"
          >
            Table sorted by firstName (ascending)
          </caption>
          <thead class="table-component__table__head">
            <tr>
              <th role="columnheader"
                  scope="col"
                  aria-sort="ascending"
                  class="table-component__th table-component__th--sort-asc"
              >
                First name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-sort="none"
                  class="table-component__th table-component__th--sort"
              >
                Last name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-disabled="true"
                  class="table-component__th"
              >
                Songs
              </th>
            </tr>
          </thead>
          <tbody class="table-component__table__body">
            <tr>
              <td>
                George
              </td>
              <td>
                Harrison
              </td>
              <td>
                22
              </td>
            </tr>
            <tr>
              <td>
                John
              </td>
              <td>
                Lennon
              </td>
              <td>
                72
              </td>
            </tr>
            <tr>
              <td>
                Paul
              </td>
              <td>
                McCartney
              </td>
              <td>
                70
              </td>
            </tr>
            <tr>
              <td>
                Ringo
              </td>
              <td>
                Starr
              </td>
              <td>
                2
              </td>
            </tr>
          </tbody>
          <tfoot>
          </tfoot>
        </table>
      </div>
      <!---->
      <div style="display: none;">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>

`;

exports[`Sortable tableComponent will not sort data when clicking a non-sortable column header 1`] = `

<div id="app">
  <div>
    <div class="table-component">
      <div class="table-component__filter">
        <input type="text"
               placeholder="Filter table…"
               class="table-component__filter__field"
        >
        <!---->
      </div>
      <div class="table-component__table-wrapper">
        <table class="table-component__table">
          <caption role="alert"
                   aria-live="polite"
                   class="table-component__table__caption"
          >
            Table sorted by firstName (descending)
          </caption>
          <thead class="table-component__table__head">
            <tr>
              <th role="columnheader"
                  scope="col"
                  aria-sort="descending"
                  class="table-component__th table-component__th--sort-"
              >
                First name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-sort="none"
                  class="table-component__th table-component__th--sort"
              >
                Last name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-disabled="true"
                  class="table-component__th"
              >
                Songs
              </th>
            </tr>
          </thead>
          <tbody class="table-component__table__body">
            <tr>
              <td>
                George
              </td>
              <td>
                Harrison
              </td>
              <td>
                22
              </td>
            </tr>
            <tr>
              <td>
                John
              </td>
              <td>
                Lennon
              </td>
              <td>
                72
              </td>
            </tr>
            <tr>
              <td>
                Paul
              </td>
              <td>
                McCartney
              </td>
              <td>
                70
              </td>
            </tr>
            <tr>
              <td>
                Ringo
              </td>
              <td>
                Starr
              </td>
              <td>
                2
              </td>
            </tr>
          </tbody>
          <tfoot>
          </tfoot>
        </table>
      </div>
      <!---->
      <div style="display: none;">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>

`;

exports[`Sortable tableComponent will not sort on a column that is not sortable 1`] = `

<div id="app">
  <div>
    <div class="table-component">
      <div class="table-component__filter">
        <input type="text"
               placeholder="Filter table…"
               class="table-component__filter__field"
        >
        <!---->
      </div>
      <div class="table-component__table-wrapper">
        <table class="table-component__table">
          <caption role="alert"
                   aria-live="polite"
                   class="table-component__table__caption"
          >
            Table sorted by songs (descending)
          </caption>
          <thead class="table-component__table__head">
            <tr>
              <th role="columnheader"
                  scope="col"
                  aria-sort="none"
                  class="table-component__th table-component__th--sort"
              >
                First name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-sort="none"
                  class="table-component__th table-component__th--sort"
              >
                Last name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-disabled="true"
                  class="table-component__th"
              >
                Songs
              </th>
            </tr>
          </thead>
          <tbody class="table-component__table__body">
            <tr>
              <td>
                John
              </td>
              <td>
                Lennon
              </td>
              <td>
                72
              </td>
            </tr>
            <tr>
              <td>
                Paul
              </td>
              <td>
                McCartney
              </td>
              <td>
                70
              </td>
            </tr>
            <tr>
              <td>
                George
              </td>
              <td>
                Harrison
              </td>
              <td>
                22
              </td>
            </tr>
            <tr>
              <td>
                Ringo
              </td>
              <td>
                Starr
              </td>
              <td>
                2
              </td>
            </tr>
          </tbody>
          <tfoot>
          </tfoot>
        </table>
      </div>
      <!---->
      <div style="display: none;">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>

`;

exports[`Sortable tableComponent will sort the data ascendingly if the header of of column without the active sort is clicked 1`] = `

<div id="app">
  <div>
    <div class="table-component">
      <div class="table-component__filter">
        <input type="text"
               placeholder="Filter table…"
               class="table-component__filter__field"
        >
        <!---->
      </div>
      <div class="table-component__table-wrapper">
        <table class="table-component__table">
          <caption role="alert"
                   aria-live="polite"
                   class="table-component__table__caption"
          >
            Table sorted by lastName (ascending)
          </caption>
          <thead class="table-component__table__head">
            <tr>
              <th role="columnheader"
                  scope="col"
                  aria-sort="none"
                  class="table-component__th table-component__th--sort"
              >
                First name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-sort="ascending"
                  class="table-component__th table-component__th--sort-asc"
              >
                Last name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-disabled="true"
                  class="table-component__th"
              >
                Songs
              </th>
            </tr>
          </thead>
          <tbody class="table-component__table__body">
            <tr>
              <td>
                George
              </td>
              <td>
                Harrison
              </td>
              <td>
                22
              </td>
            </tr>
            <tr>
              <td>
                John
              </td>
              <td>
                Lennon
              </td>
              <td>
                72
              </td>
            </tr>
            <tr>
              <td>
                Paul
              </td>
              <td>
                McCartney
              </td>
              <td>
                70
              </td>
            </tr>
            <tr>
              <td>
                Ringo
              </td>
              <td>
                Starr
              </td>
              <td>
                2
              </td>
            </tr>
          </tbody>
          <tfoot>
          </tfoot>
        </table>
      </div>
      <!---->
      <div style="display: none;">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>

`;

exports[`Sortable tableComponent wont break if a sortable column has no data 1`] = `

<div id="app">
  <div>
    <div class="table-component">
      <div class="table-component__filter">
        <input type="text"
               placeholder="Filter table…"
               class="table-component__filter__field"
        >
        <!---->
      </div>
      <div class="table-component__table-wrapper">
        <table class="table-component__table">
          <caption role="alert"
                   aria-live="polite"
                   class="table-component__table__caption"
          >
            Table sorted by lastName (ascending)
          </caption>
          <thead class="table-component__table__head">
            <tr>
              <th role="columnheader"
                  scope="col"
                  aria-sort="none"
                  class="table-component__th table-component__th--sort"
              >
                First name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-sort="ascending"
                  class="table-component__th table-component__th--sort-asc"
              >
                Last name
              </th>
              <th role="columnheader"
                  scope="col"
                  aria-sort="none"
                  class="table-component__th table-component__th--sort"
              >
                Songs
              </th>
            </tr>
          </thead>
          <tbody class="table-component__table__body">
            <tr>
              <td>
                John
              </td>
              <td>
              </td>
              <td>
                30
              </td>
            </tr>
            <tr>
              <td>
                Paul
              </td>
              <td>
              </td>
              <td>
                20
              </td>
            </tr>
            <tr>
              <td>
                George
              </td>
              <td>
              </td>
              <td>
                420
              </td>
            </tr>
            <tr>
              <td>
                Ringo
              </td>
              <td>
              </td>
              <td>
                210
              </td>
            </tr>
          </tbody>
          <tfoot>
          </tfoot>
        </table>
      </div>
      <!---->
      <div style="display: none;">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>

`;
